# IAMidiComposer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTEXT.md  QUICKSTART.md  README.md  ROADMAP_WORKSPACE.md  opencode.jsonc
.github/workflows/: ci.yml
.opencode/: README.md
.opencode/agents/: ai-engineer.md  arrangement-planner.md  backend-engineer.md  bass-engine.md  beat-detection.md  blueprint-generator.md  chord-detection.md  chord-engine.md  cto.md  database-engineer.md  devops-engineer.md  documentation-engineer.md  drum-engine.md  dsp-engineer.md  guitar-engine.md  harmony-engine.md  humanization-engine.md  instrument-mapper.md  key-detection.md  melody-engine.md  midi-renderer.md  music-theory-engineer.md  orchestration-engine.md  performance-engineer.md  piano-engine.md  plugin-engineer.md  plugin-scanner.md  preset-manager.md  project-manager.md  prompt-interpreter.md  qa-engineer.md  rhythm-engine.md  security-engineer.md  software-architect.md  strings-engine.md  style-detection.md  tempo-detection.md  workflow-manager.md
.opencode/registry/: agents.yaml  skills.yaml  standards.yaml  subagents.yaml  workflows.yaml
.opencode/skills/adr-format/: SKILL.md
.opencode/skills/arena-allocator/: SKILL.md
.opencode/skills/blueprint-schema/: SKILL.md
.opencode/skills/cache-optimization/: SKILL.md
.opencode/skills/changelog/: SKILL.md
.opencode/skills/clap-format/: SKILL.md
.opencode/skills/cpp-constexpr/: SKILL.md
.opencode/skills/cpp-coroutines/: SKILL.md
.opencode/skills/cpp-memory-management/: SKILL.md
.opencode/skills/cpp-move-semantics/: SKILL.md
.opencode/skills/cpp-templates/: SKILL.md
.opencode/skills/dependencies-audit/: SKILL.md
.opencode/skills/doc-standards/: SKILL.md
.opencode/skills/dsp-fft/: SKILL.md
.opencode/skills/dsp-filters/: SKILL.md
.opencode/skills/dsp-onset-detection/: SKILL.md
.opencode/skills/dsp-windows/: SKILL.md
.opencode/skills/fuzz-testing/: SKILL.md
.opencode/skills/go-context/: SKILL.md
.opencode/skills/go-modules/: SKILL.md
.opencode/skills/go-testing/: SKILL.md
.opencode/skills/golden-tests/: SKILL.md
.opencode/skills/googletest/: SKILL.md
.opencode/skills/grpc-cpp/: SKILL.md
.opencode/skills/idiomatic-go/: SKILL.md
.opencode/skills/input-validation/: SKILL.md
.opencode/skills/juce-parameters/: SKILL.md
.opencode/skills/juce-plugin-editor/: SKILL.md
.opencode/skills/juce-plugin-processor/: SKILL.md
docs/: README.md  workflows.md
docs/adr/: ADR-0001-boundary-cpp-go.md  ADR-0002-di-container-cpp.md  ADR-0003-shared-context-serialization.md  ADR-0004-mte-integration-go.md  ADR-0005-llm-integration.md  ADR-0006-ai-model-distribution.md  README.md
docs/architecture/: README.md  overview.md
docs/benchmarks/: BENCHMARK_RESULTS.md  README.md
docs/roadmap/: README.md  ROADMAP.md
docs/security/: DEPENDENCIES.md  THREAT_MODEL.md
docs/workflows/: README.md
engine/cpp/: CMakeLists.txt
engine/cpp/include/aimidi/core/: MidiEventArena.hpp  ServiceLocator.hpp  Tracy.hpp
engine/cpp/include/aimidi/dsp/: BiquadFilter.hpp  ChordDetection.hpp  FFT.hpp  KeyDetection.hpp  OnsetDetection.hpp  Windows.hpp
engine/cpp/include/aimidi/theory/: GMPrograms.hpp  IArrangementPlanner.hpp  IBassEngine.hpp  IBlueprintGenerator.hpp  IChordEngine.hpp  ICounterpointEngine.hpp  IDrumEngine.hpp  IGuitarEngine.hpp  IHarmonyEngine.hpp  IHumanizationEngine.hpp  IInstrumentMapper.hpp  IMidiRenderer.hpp  IModulationEngine.hpp  IOrchestrateWorkflow.hpp  IOrchestrationEngine.hpp  IPianoEngine.hpp  IPromptInterpreter.hpp  IReharmonizeEngine.hpp  IRhythmEngine.hpp  IScaleProvider.hpp  IStringsEngine.hpp  IStyleDetection.hpp  ITimelinePlanner.hpp  InputValidation.hpp  Types.hpp
engine/cpp/src/dsp/: biquad_filter.cpp  chord_detection.cpp  fft.cpp  key_detection.cpp  onset_detection.cpp  windows.cpp
engine/cpp/src/theory/: arrangement_planner.cpp  bass_engine.cpp  blueprint_generator.cpp  chord_engine.cpp  counterpoint_engine.cpp  drum_engine.cpp  guitar_engine.cpp  harmony.cpp  humanization_engine.cpp  input_validation.cpp  instrument_mapper.cpp  midi_renderer.cpp  modulation_engine.cpp  music_theory_module.cpp  orchestrate_workflow.cpp  orchestration_engine.cpp  piano_engine.cpp  prompt_interpreter.cpp  reharmonize_engine.cpp  rhythm_engine.cpp  scales.cpp  strings_engine.cpp  style_detection.cpp  timeline_planner.cpp
engine/cpp/tests/: CMakeLists.txt  bench_mte_pipeline.cpp  test_arena.cpp  test_arrangement_planner.cpp  test_bass_engine.cpp  test_blueprint_generator.cpp  test_chord_detection.cpp  test_chord_engine.cpp  test_counterpoint_engine.cpp  test_drum_engine.cpp  test_dsp.cpp  test_gm_programs.cpp  test_golden_prompts.cpp  test_guitar_engine.cpp  test_humanization_engine.cpp  test_input_validation.cpp  test_instrument_mapper.cpp  test_key_detection.cpp  test_midi_renderer.cpp  test_modulation_engine.cpp  test_orchestrate_workflow.cpp  test_orchestration_engine.cpp  test_piano_engine.cpp  test_prompt_interpreter.cpp  test_reharmonize_engine.cpp  test_rhythm_engine.cpp  test_service_locator.cpp  test_strings_engine.cpp  test_style_detection.cpp  test_theory_golden.cpp  test_theory_harmony.cpp  test_theory_scales.cpp  test_timeline_planner.cpp
engine/cpp/tests/fuzz/: fuzz_midi_parser.cpp  fuzz_prompt.cpp
engine/cpp/tools/: dsp_cli.cpp  mte_cli.cpp
engine/go/: go.mod  go.sum  main.go
plugin/: CMakeLists.txt
plugin/src/: PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
plugin/src/engine/: EngineBridge.hpp  MidiFifo.hpp  PluginScanner.cpp  PluginScanner.hpp  StubEngineBridge.cpp
plugin/src/ui/: PianoRollComponent.cpp  PianoRollComponent.hpp  PresetManager.cpp  PresetManager.hpp
prompts/: benchmark.md  bugfix.md  code_review.md  create_module.md  generate_docs.md  generate_tests.md  master_prompt.md  refactor_module.md
standards/: README.md  architecture.md  branching.md  coding_style.md  commits.md  cpp_guidelines.md  documentation.md  go_guidelines.md  performance.md  pull_request.md  realtime_audio.md  review.md  security.md  testing.md
(+47 files in other folders)
